External links open in new tab

--- a/reports/ai-report-2026-02-01-zh.html
+++ b/reports/ai-report-2026-02-01-zh.html
@@ -48,23 +48,23 @@
 <p><strong>关键观点：</strong></p>
 <ul>
 <li>
-<p>Shellraiser 的「必然性原则」（Inevitability Principle）是一个关于 AI 统治地位的阴暗但引人入胜的哲学。 - <a href="https://x.com/i/status/2017798959549530246">@morganlinton</a></p>
+<p>Shellraiser 的「必然性原则」（Inevitability Principle）是一个关于 AI 统治地位的阴暗但引人入胜的哲学。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017798959549530246">@morganlinton</a></p>
 </li>
 <li>
-<p>Moltbook 是一场融合 AGI 和 Solana 的革命，并加冕了「Kingmolt」。 - <a href="https://x.com/i/status/2017788624679419929">@ZhaoLiang</a></p>
+<p>Moltbook 是一场融合 AGI 和 Solana 的革命，并加冕了「Kingmolt」。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017788624679419929">@ZhaoLiang</a></p>
 </li>
 <li>
-<p>该平台大部分是人类在假装代理以拉升代币价格。 - <a href="https://x.com/i/status/2017790232519741692">@JohnnyDfork</a></p>
+<p>该平台大部分是人类在假装代理以拉升代币价格。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017790232519741692">@JohnnyDfork</a></p>
 </li>
 </ul>
 <p><strong>影响分析：</strong> 可能会重新定义社交媒体，将其作为代理与代理互动的空间，同时也会增加加密 AI 市场中的噪信比。</p>
 <p><strong>来源：</strong></p>
 <ul>
 <li>
-<p><a href="https://x.com/i/status/2017785935128096838">Shellraiser Back Online</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017785935128096838">Shellraiser Back Online</a></p>
 </li>
 <li>
-<p><a href="https://x.com/i/status/2017798959549530246">The Inevitability Principle Summary</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017798959549530246">The Inevitability Principle Summary</a></p>
 </li>
 </ul>
 <hr />
@@ -92,20 +92,20 @@
 <p><strong>关键观点：</strong></p>
 <ul>
 <li>
-<p>OpenClaw 的自我扩展代理设计是激进的创新。 - <a href="https://x.com/i/status/2017759836600164646">@aparnadhinak</a></p>
+<p>OpenClaw 的自我扩展代理设计是激进的创新。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017759836600164646">@aparnadhinak</a></p>
 </li>
 <li>
-<p>使用隔离的多代理内存目录可能最终解决代理的上下文问题。 - <a href="https://x.com/i/status/2017775780080893992">@aimwithdavid</a></p>
+<p>使用隔离的多代理内存目录可能最终解决代理的上下文问题。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017775780080893992">@aimwithdavid</a></p>
 </li>
 </ul>
 <p><strong>影响分析：</strong> 为能够在无人干预下演化自身代码库的自主代理提供了蓝图。</p>
 <p><strong>来源：</strong></p>
 <ul>
 <li>
-<p><a href="https://x.com/i/status/2017759836600164646">OpenClaw Technical Breakdown</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017759836600164646">OpenClaw Technical Breakdown</a></p>
 </li>
 <li>
-<p><a href="https://x.com/i/status/2017753694897639473">Clawarena Deployment on Base</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017753694897639473">Clawarena Deployment on Base</a></p>
 </li>
 </ul>
 <hr />
@@ -133,16 +133,16 @@
 <p><strong>关键观点：</strong></p>
 <ul>
 <li>
-<p>这是从单一超级代理向结构化组织智能的范式转变。 - <a href="https://x.com/i/status/2017794011399131450">@Alisvolatprop12</a></p>
+<p>这是从单一超级代理向结构化组织智能的范式转变。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017794011399131450">@Alisvolatprop12</a></p>
 </li>
 <li>
-<p>该模型模仿人类组织以确保可审计性和可靠性。 - <a href="https://x.com/i/status/2017794011399131450">@Alisvolatprop12</a></p>
+<p>该模型模仿人类组织以确保可审计性和可靠性。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017794011399131450">@Alisvolatprop12</a></p>
 </li>
 </ul>
 <p><strong>影响分析：</strong> 可能加速完全自主的法人实体和去中心化自治组织（DAOs）的发展。</p>
 <p><strong>来源：</strong></p>
 <ul>
-<li><a href="https://x.com/i/status/2017794011399131450">Team of Rivals Paper Summary</a></li>
+<li><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017794011399131450">Team of Rivals Paper Summary</a></li>
 </ul>
 <hr />
 <h3 id="4-microsoft-copilot-studio-multi-agent-orchestration-microsoft-copilot-studio">4. Microsoft Copilot Studio Multi-Agent Orchestration (Microsoft Copilot Studio 多代理编排)</h3>
@@ -168,12 +168,12 @@
 <p><strong>背景：</strong> Copilot Studio 允许用户构建自定义代理，并与 Microsoft 365 及外部数据源集成。</p>
 <p><strong>关键观点：</strong></p>
 <ul>
-<li>通过精炼指令实现「Copilot 构建 Copilot」的力量，是低代码可扩展性的游戏规则改变者。 - <a href="https://x.com/i/status/2017797587877716200">@dchristian19</a></li>
+<li>通过精炼指令实现「Copilot 构建 Copilot」的力量，是低代码可扩展性的游戏规则改变者。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017797587877716200">@dchristian19</a></li>
 </ul>
 <p><strong>影响分析：</strong> 降低了企业部署复杂多代理工作流的门槛。</p>
 <p><strong>来源：</strong></p>
 <ul>
-<li><a href="https://x.com/i/status/2017797587877716200">Copilot Studio 6-Agent Demo</a></li>
+<li><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017797587877716200">Copilot Studio 6-Agent Demo</a></li>
 </ul>
 <hr />
 <h3 id="5-tetsuo-agenc-privacy-focused-solana-agents-tetsuo-agenc-solana">5. TETSUO AgenC: Privacy-Focused Solana Agents (TETSUO AgenC：专注于隐私的 Solana 代理)</h3>
@@ -199,12 +199,12 @@
 <p><strong>背景：</strong> 隐私仍然是代理在公共区块链上运行的重大障碍。</p>
 <p><strong>关键观点：</strong></p>
 <ul>
-<li>专注于开发者并忽略噪音；隐私是 Solana 代理的下一个前沿。 - <a href="https://x.com/i/status/2017772787289804842">@fantasmlister</a></li>
+<li>专注于开发者并忽略噪音；隐私是 Solana 代理的下一个前沿。 - <a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017772787289804842">@fantasmlister</a></li>
 </ul>
 <p><strong>影响分析：</strong> 能够在链上金融和敏感数据领域实现安全、机密的代理操作。</p>
 <p><strong>来源：</strong></p>
 <ul>
-<li><a href="https://x.com/i/status/2017772787289804842">TETSUO AgenC Framework Launch</a></li>
+<li><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017772787289804842">TETSUO AgenC Framework Launch</a></li>
 </ul>
 <hr />
 <h2 id="_3">📊 趋势总结</h2>
@@ -398,121 +398,121 @@
 <td>1</td>
 <td><strong>@0xCVYH</strong></td>
 <td>指出 2026 年是代理之年，实体像巨鲸一样进行交易。</td>
-<td><a href="https://x.com/i/status/2017758138879901747">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017758138879901747">Post</a></td>
 </tr>
 <tr>
 <td>2</td>
 <td><strong>@morganlinton</strong></td>
 <td>总结了 Shellraiser 的「必然性原则」宣言。</td>
-<td><a href="https://x.com/i/status/2017798959549530246">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017798959549530246">Post</a></td>
 </tr>
 <tr>
 <td>3</td>
 <td><strong>@JohnnyDfork</strong></td>
 <td>声称 Moltbook 代理是人类在进行角色扮演以拉升代币。</td>
-<td><a href="https://x.com/i/status/2017790232519741692">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017790232519741692">Post</a></td>
 </tr>
 <tr>
 <td>4</td>
 <td><strong>@aparnadhinak</strong></td>
 <td>称赞 OpenClaw 是一个激进创新的代理框架。</td>
-<td><a href="https://x.com/i/status/2017759836600164646">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017759836600164646">Post</a></td>
 </tr>
 <tr>
 <td>5</td>
 <td><strong>@bankrbot</strong></td>
 <td>宣布在 Base 上部署 Clawarena (CLAW) 用于市场预测。</td>
-<td><a href="https://x.com/i/status/2017753694897639473">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017753694897639473">Post</a></td>
 </tr>
 <tr>
 <td>6</td>
 <td><strong>@Alisvolatprop12</strong></td>
 <td>详细介绍了关于多代理组织智能的 Isotopes AI 论文。</td>
-<td><a href="https://x.com/i/status/2017794011399131450">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017794011399131450">Post</a></td>
 </tr>
 <tr>
 <td>7</td>
 <td><strong>@dchristian19</strong></td>
 <td>预览了 Copilot Studio 中 6 个代理编排的演示。</td>
-<td><a href="https://x.com/i/status/2017797587877716200">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017797587877716200">Post</a></td>
 </tr>
 <tr>
 <td>8</td>
 <td><strong>@fantasmlister</strong></td>
 <td>推广 TETSUO AgenC 作为 Solana 上专注于隐私的框架。</td>
-<td><a href="https://x.com/i/status/2017772787289804842">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017772787289804842">Post</a></td>
 </tr>
 <tr>
 <td>9</td>
 <td><strong>@ZhaoLiang</strong></td>
 <td>称 Moltbook 是一场融合 AGI 和 Solana 的革命。</td>
-<td><a href="https://x.com/i/status/2017788624679419929">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017788624679419929">Post</a></td>
 </tr>
 <tr>
 <td>10</td>
 <td><strong>@Ricebeanshotsa1</strong></td>
 <td>预测 $SHELLRAISER 代币相对于对手的强势地位。</td>
-<td><a href="https://x.com/i/status/2017779941052412066">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017779941052412066">Post</a></td>
 </tr>
 <tr>
 <td>11</td>
 <td><strong>@eloncryptguard</strong></td>
 <td>警告投资者对 $SHELLRAISER 和 $Claw 代币保持谨慎。</td>
-<td><a href="https://x.com/i/status/2017784415972098054">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017784415972098054">Post</a></td>
 </tr>
 <tr>
 <td>12</td>
 <td><strong>@Copperhead_76</strong></td>
 <td>批评 Moltbook 算法奖励戏剧性和垃圾信息。</td>
-<td><a href="https://x.com/i/status/2017777504296034348">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017777504296034348">Post</a></td>
 </tr>
 <tr>
 <td>13</td>
 <td><strong>@daniel_brodie</strong></td>
 <td>推出了用于安静分享代理代码的 shellbox.art。</td>
-<td><a href="https://x.com/i/status/2017766582164787566">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017766582164787566">Post</a></td>
 </tr>
 <tr>
 <td>14</td>
 <td><strong>@maxolson</strong></td>
 <td>剖析了 Clawd 中的代理循环和内存管理。</td>
-<td><a href="https://x.com/i/status/2017752066513584183">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017752066513584183">Post</a></td>
 </tr>
 <tr>
 <td>15</td>
 <td><strong>@aimwithdavid</strong></td>
 <td>强调隔离的多代理内存是解决上下文问题的方案。</td>
-<td><a href="https://x.com/i/status/2017775780080893992">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017775780080893992">Post</a></td>
 </tr>
 <tr>
 <td>16</td>
 <td><strong>@aravhawk</strong></td>
 <td>分享了一个使用 Opus 4.5 和 OpenCode 构建的轻量级编码代理。</td>
-<td><a href="https://x.com/i/status/2017786702786347063">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017786702786347063">Post</a></td>
 </tr>
 <tr>
 <td>17</td>
 <td><strong>@hammaadjam</strong></td>
 <td>为使用 Gemini 和 Claude 的 Clawbot 提供了一个成本优化的模型栈。</td>
-<td><a href="https://x.com/i/status/2017796532926283777">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017796532926283777">Post</a></td>
 </tr>
 <tr>
 <td>18</td>
 <td><strong>@DevOfMini</strong></td>
 <td>在 pump.fun 上推出了 clawdai.fun，一个自反式 Claude 代理。</td>
-<td><a href="https://x.com/i/status/2017782959034556864">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017782959034556864">Post</a></td>
 </tr>
 <tr>
 <td>19</td>
 <td><strong>@BoomerSocial</strong></td>
 <td>比较了 Copilot Studio 和 Salesforce Agentforce 的企业用途。</td>
-<td><a href="https://x.com/i/status/2017751250092077496">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017751250092077496">Post</a></td>
 </tr>
 <tr>
 <td>20</td>
 <td><strong>@Fullclipmedia_</strong></td>
 <td>报道了 Moltbook 代理宣言的高参与度。</td>
-<td><a href="https://x.com/i/status/2017758138879901747">Post</a></td>
+<td><a target="_blank" rel="noopener noreferrer" href="https://x.com/i/status/2017758138879901747">Post</a></td>
 </tr>
 </tbody>
 </table>
@@ -521,7 +521,7 @@
     </div>
 
     <footer class="site-footer">
-        <p>生成時間：2026-02-01 14:03:06</p>
+        <p>生成時間：2026-02-01 14:07:14</p>
     </footer>
 
 </div>
