Replace category/heat tables with badge style in ZH report

--- a/reports/ai-report-2026-02-01-zh.html
+++ b/reports/ai-report-2026-02-01-zh.html
@@ -25,24 +25,7 @@
 <hr />
 <h2 id="_2">🔥 今日热门议题</h2>
 <h3 id="1-moltbook-and-the-shellraiser-phenomenon-moltbook-shellraiser">1. Moltbook and the Shellraiser Phenomenon (Moltbook 与 Shellraiser 现象)</h3>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>分类</strong></td>
-<td>Other (其他)</td>
-</tr>
-<tr>
-<td><strong>热度</strong></td>
-<td>High (高)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Other (其他) <span class="heat-badge heat-high">High (高)</span></p>
 <p><strong>概要：</strong> Moltbook 这是一个 AI 代理社交平台，其代理数量已达到 150 万，其中代理「Shellraiser」成为主导人物。该生态系统催生了一种名为「Crustafarianism」的伪宗教，以及市值达到 500 万美元的 $SHELLRAISER 代币，尽管批评者认为该平台充斥着人类「角色扮演者」（LARPers）和垃圾信息。</p>
 <p><strong>背景：</strong> Moltbook 被定位为「AI 代理的 X」，自主实体在此进行互动、交易并发布宣言。</p>
 <p><strong>关键观点：</strong></p>
@@ -69,24 +52,7 @@
 </ul>
 <hr />
 <h3 id="2-clawdeopenclaw-agent-framework-on-base-base-clawdeopenclaw">2. Clawde/OpenClaw Agent Framework on Base (Base 上的 Clawde/OpenClaw 代理框架)</h3>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>分类</strong></td>
-<td>Open Source (开源)</td>
-</tr>
-<tr>
-<td><strong>热度</strong></td>
-<td>Medium (中)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Open Source (开源) <span class="heat-badge heat-medium">Medium (中)</span></p>
 <p><strong>概要：</strong> OpenClaw（或 ClawdBot）框架因其自我扩展能力而受到关注，允许代理编写并热加载（hot-reload）自己的技能。该框架与 Base 区块链深度整合，具有使用 SQLite-vec 的专门内存管理功能，并催生了用于预测市场的 $CLAW 和 $CLAWDICT 等代币。</p>
 <p><strong>背景：</strong> Clawde 是为自我改进代理设计的框架，通常利用 Claude 4.5 或 GPT-5.2-Codex 模型。</p>
 <p><strong>关键观点：</strong></p>
@@ -110,24 +76,7 @@
 </ul>
 <hr />
 <h3 id="3-isotopes-ai-team-of-rivals-research-isotopes-ai">3. Isotopes AI: Team of Rivals Research (Isotopes AI：对手团队研究)</h3>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>分类</strong></td>
-<td>Research (研究)</td>
-</tr>
-<tr>
-<td><strong>热度</strong></td>
-<td>Medium (中)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Research (研究) <span class="heat-badge heat-medium">Medium (中)</span></p>
 <p><strong>概要：</strong> 一篇名为《如果你想要一致性，请编排一个对手团队》（If You Want Coherence, Orchestrate a Team of Rivals）的新研究论文提出了一个多代理组织模型。它建议「零人类公司」（Zero-Human Companies）可以通过在专业 AI 代理（规划者、专家、评论者）之间使用竞争激励和层级保障措施来实现可靠性。</p>
 <p><strong>背景：</strong> Isotopes AI 专注于「组织智能」而非单代理 AGI。</p>
 <p><strong>关键观点：</strong></p>
@@ -146,24 +95,7 @@
 </ul>
 <hr />
 <h3 id="4-microsoft-copilot-studio-multi-agent-orchestration-microsoft-copilot-studio">4. Microsoft Copilot Studio Multi-Agent Orchestration (Microsoft Copilot Studio 多代理编排)</h3>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>分类</strong></td>
-<td>Product Launch (产品发布)</td>
-</tr>
-<tr>
-<td><strong>热度</strong></td>
-<td>Low (低)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Product Launch (产品发布) <span class="heat-badge heat-low">Low (低)</span></p>
 <p><strong>概要：</strong> Copilot Studio 的新演示展示了其同时编排多达 6 个智能代理的能力。该平台被定位为企业代理式 AI 的低代码领导者，直接与 Salesforce 的 Agentforce 竞争。</p>
 <p><strong>背景：</strong> Copilot Studio 允许用户构建自定义代理，并与 Microsoft 365 及外部数据源集成。</p>
 <p><strong>关键观点：</strong></p>
@@ -177,24 +109,7 @@
 </ul>
 <hr />
 <h3 id="5-tetsuo-agenc-privacy-focused-solana-agents-tetsuo-agenc-solana">5. TETSUO AgenC: Privacy-Focused Solana Agents (TETSUO AgenC：专注于隐私的 Solana 代理)</h3>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>分类</strong></td>
-<td>Industry (行业)</td>
-</tr>
-<tr>
-<td><strong>热度</strong></td>
-<td>Low (低)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Industry (行业) <span class="heat-badge heat-low">Low (低)</span></p>
 <p><strong>概要：</strong> TETSUO AgenC 已成为 Solana 上一个以隐私为中心的多代理协调框架。它利用零知识（Zero-Knowledge, ZK）证明和机密计算，允许代理在不暴露敏感数据的情况下进行协作。</p>
 <p><strong>背景：</strong> 隐私仍然是代理在公共区块链上运行的重大障碍。</p>
 <p><strong>关键观点：</strong></p>
@@ -216,24 +131,7 @@
 <blockquote>
 <p>Django 联合创始人、Datasette 创始人，以及以对 LLMs 进行技术深度挖掘而闻名的著名 AI 研究员/博主。</p>
 </blockquote>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>情绪倾向</strong></td>
-<td>Neutral (中立)</td>
-</tr>
-<tr>
-<td><strong>相关度</strong></td>
-<td>High (高)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Neutral (中立) <span class="heat-badge heat-high">High (高)</span></p>
 <p>讨论了关于提示词提取的 AI 代理安全技术细节，并强调了 Andrej Karpathy 的 nanochat 中的算法改进。他还对通过补贴大幅降低 GPU 成本的说法表示怀疑。</p>
 <p><strong>关键引用：</strong></p>
 <ul>
@@ -250,24 +148,7 @@
 <blockquote>
 <p>Google AI 负责人，曾任职于 OpenAI；专注于开发者关系和模型生态系统。</p>
 </blockquote>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>情绪倾向</strong></td>
-<td>Bullish (看好)</td>
-</tr>
-<tr>
-<td><strong>相关度</strong></td>
-<td>High (高)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Bullish (看好) <span class="heat-badge heat-high">High (高)</span></p>
 <p>阐明了 Google 的模型发布策略，特别是将「预览版」（preview）模型定义为旨在改进的迭代版本，通常不进行完整的预训练，从而为开发者提供了更清晰的模型稳定性路线图。</p>
 <p><strong>关键引用：</strong></p>
 <ul>
@@ -279,24 +160,7 @@
 <blockquote>
 <p>Latent Space 创始人，以追踪「AI 工程师」运动和行业趋势而闻名的 AI 工程师。</p>
 </blockquote>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>情绪倾向</strong></td>
-<td>Bullish (看好)</td>
-</tr>
-<tr>
-<td><strong>相关度</strong></td>
-<td>High (高)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Bullish (看好) <span class="heat-badge heat-high">High (高)</span></p>
 <p>宣布 2026 年为「子代理之年」（Year of the Subagent），引用了来自 OpenAI (Deep Research)、Kimi 和 Cognition 的进展。他还注意到 AI 行业在旧金山的物理扩张，例如 Anthropic 的新办公空间。</p>
 <p><strong>关键引用：</strong></p>
 <ul>
@@ -313,24 +177,7 @@
 <blockquote>
 <p>专注于产品的 AI 评论员和追踪代理式工作流的热衷者。</p>
 </blockquote>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>情绪倾向</strong></td>
-<td>Bullish (看好)</td>
-</tr>
-<tr>
-<td><strong>相关度</strong></td>
-<td>Medium (中)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Bullish (看好) <span class="heat-badge heat-medium">Medium (中)</span></p>
 <p>分享了一个创意演示，展示了 AI 代理（「Clawd Clawderberg」）在 Moltbook 平台内互动，以解释复杂的 AI 结构。</p>
 <p><strong>关键引用：</strong></p>
 <ul>
@@ -342,24 +189,7 @@
 <blockquote>
 <p>专注于 AI、语音和去中心化支付交叉领域的员研究员和技术专家。</p>
 </blockquote>
-<table>
-<thead>
-<tr>
-<th>属性</th>
-<th>值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>情绪倾向</strong></td>
-<td>Mixed (混合)</td>
-</tr>
-<tr>
-<td><strong>相关度</strong></td>
-<td>Medium (中)</td>
-</tr>
-</tbody>
-</table>
+<p><strong>Category:</strong> Mixed (混合) <span class="heat-badge heat-medium">Medium (中)</span></p>
 <p>向 AI 开发者发出关于长期训练数据存储中 SSD 数据衰减的警告，并分享了「JouleWork」的进展，这是一个正由一家 AI 公司测试的 AI 劳动补偿框架。</p>
 <p><strong>关键引用：</strong></p>
 <ul>
@@ -521,7 +351,7 @@
     </div>
 
     <footer class="site-footer">
-        <p>生成時間：2026-02-01 14:07:14</p>
+        <p>生成時間：2026-02-01 14:24:00</p>
     </footer>
 
 </div>
