feat: update report pages to warm editorial theme

--- a/reports/ai-report-2026-02-26.html
+++ b/reports/ai-report-2026-02-26.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Hot Topics Daily Report — 2026-02-26</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,400;6..72,600&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -15,7 +18,7 @@
     </nav>
 
     <h1>AI Hot Topics Daily Report — 2026-02-26</h1>
-    <p class="report-meta">Generated at 2026-02-26 21:21:45 &middot; Source: X (Twitter)</p>
+    <p class="report-meta">Generated at 2026-02-26 21:51:33 &middot; Source: X (Twitter)</p>
 
     
     <section>
@@ -1585,7 +1588,7 @@
     
 
     <footer class="site-footer">
-        <p>Generated at 2026-02-26 21:21:45</p>
+        <p>Generated at 2026-02-26 21:51:33</p>
     </footer>
 
 </div>
